--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "web-server",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.09.1"},
   "description": "",
   "main": "index.js",
   "scripts": {
