--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-server",
   "version": "1.0.0",
   "engines": {
-    "node": "12.09.1"},
+    "node": "v12.09.1"},
   "description": "",
   "main": "index.js",
   "scripts": {
